--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
 spring:
-  application:
-    name: credit-service
+  jackson:
+    date-format: yyyy-MM-dd'T'HH:mm:ss.SSS
+    deserialization:
+      fail-on-unknown-properties: false
+    default-property-inclusion: NON_NULL
+    mapper:
+      accept-case-insensitive-properties: true
+    time-zone: America/Sao_Paulo
