--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,7 @@ jobs:
           tag: 1.0.${{ github.run_number }}
   functional_tests:
     name: Tests and coverage generation
+    runs-on: ubuntu-latest
     steps:
       - name: Test and Report with gradle
         run: ./gradlew test jacocoTestReport
