--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '16'
-          distribution: 'adopt
+          distribution: 'adopt'
       - name: Test with Gradle
         run:  ./gradlew test jacocoTestReport
       - name: Upload to Codecov
