--- a/.github/workflows/quality_assurance.yml
+++ b/.github/workflows/quality_assurance.yml
@@ -23,7 +23,5 @@ jobs:
         uses: codecov/codecov-action@v2.0.2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./build/reports/jacoco/test/
-          files: ./jacocoTestReport.xml
+          file: ./build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
-          verbose: true
