--- a/codecov.yml
+++ b/codecov.yml
@@ -3,3 +3,4 @@ ignore:
   - "src/main/java/com/wvs/clientservice/dto"
   - "src/main/java/com/wvs/clientservice/enumeration"
   - "src/main/java/com/wvs/clientservice/exception"
+  - "**/CreditServiceApplication.java"
