--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.4'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '2.7.18'
+	id 'io.spring.dependency-management' version '1.1.6'
 	id 'java'
 	id 'jacoco'
 }
@@ -20,13 +20,13 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2021.0.1")
+	set('springCloudVersion', "2021.0.9")
 	set('flywayVersion', "7.13.0")
-	set('hibernateValidatorVersion', "6.1.5.Final")
-	set('modelMapperVersion', "3.0.0")
-	set('camundaEngineDmnVersion', "7.16.0")
-	set('junitVersion', "4.13.1")
-	set('randomBeansVersion', "3.8.0")
+	set('hibernateValidatorVersion', "6.2.5.Final")
+	set('modelMapperVersion', "3.2.1")
+	set('camundaEngineDmnVersion', "7.21.0")
+	set('junitVersion', "4.13.2")
+	set('randomBeansVersion', "3.9.0")
 }
 
 dependencies {
@@ -60,7 +60,7 @@ test {
 }
 
 jacoco {
-	toolVersion = "0.8.7"
+	toolVersion = "0.8.12"
 }
 
 jacocoTestReport {
